tests/baselines/reference/moduleNoneErrors.errors.txt
tests/cases/compiler/a.ts(1,14): error TS1148: Cannot compile modules unless the '--module' flag is provided with a valid module type. Consider setting the 'module' compiler option in a 'tsconfig.json' file.


==== tests/cases/compiler/a.ts (1 errors) ====
    export class Foo {
                 ~~~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided with a valid module type. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
        foo: string;
    }
    